fix : top 버튼 z-index 수정

--- a/src/components/common/css/footer.css
+++ b/src/components/common/css/footer.css
@@ -74,7 +74,6 @@ footer .logo {
   position: fixed;
   bottom: 30px;
   right: 30px;
-  z-index: 9;
   width: 42px;
   height: 42px;
   background-color: #333;
